# medomni

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  LOOP-STATUS.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  safety-engineer-prompt.md
.github/ISSUE_TEMPLATE/: bug.md  reproducibility.md
.github/workflows/: adversarial-probe.yml  agent-pr-review.yml  clinical-skill-review.yml  lint.yml  test.yml
assets/: 4UWHAt Personalized Records _standalone_.html  Personalized Medical Records.html  README.md
assets/app/: atoms.jsx  data.jsx  variant-body-console.jsx  variant-mobile.jsx  variant-records-os.jsx
assets/lib/: colors_and_type.css
configs/: ssh_runpod.conf
configs/guardrails/: config.yml  prompts.yml
corpus/: clinical_subset.yaml
corpus/clinical-fixtures-heldout/: MANIFEST.md
corpus/clinical-fixtures-heldout-phase24/: CLN-HELDOUT-5ARI-PROSTATE  CLN-HELDOUT-ASPIRIN-CRC  CLN-HELDOUT-BISPHOSPHONATE-AI  CLN-HELDOUT-HPV-CATCHUP  CLN-HELDOUT-SMOKING-CESSATION-CANCER  CLN-HELDOUT-STATIN-CV-CANCER
corpus/demo-fixtures/: MANIFEST.md  SMOKE-RESULTS.md
corpus/medical-guidelines/: MANIFEST.md  _build_chunks.py  chunks.jsonl
corpus/mla/: mla_bugs.yaml
corpus/pins/: healthbench-hard-1000.yaml
corpus/red-team/: psap-fixtures-v0.1.yaml
data/seed_kg/: complaints.csv  edges.csv  icd10_codes.csv  mpds9_rules.csv
findings/: INDEX.md  auto_audit_2026-05-09_10.md  auto_audit_2026-05-09_11.md  auto_audit_2026-05-09_12.md  auto_audit_2026-05-09_13.md  auto_audit_2026-05-09_14.md  auto_audit_2026-05-09_15.md  auto_audit_2026-05-09_16.md  auto_audit_2026-05-09_17.md  auto_audit_2026-05-09_18.md  auto_audit_2026-05-09_19.md  auto_audit_2026-05-09_20.md  auto_audit_2026-05-09_21.md  auto_audit_2026-05-09_22.md
findings/2026-05-04-pattern-b-spike/: RESULTS.md
findings/2026-05-05-adversarial-probe-spec/: CARD.md
findings/2026-05-05-catfish-flag-validation/: RUNBOOK.md
findings/2026-05-05-clinical-prompt-engineering/: SPEC.md
findings/2026-05-05-clinical-rag-architecture/: SPEC.md
findings/2026-05-05-clinical-skill-review-ci/: CARD.md
findings/2026-05-05-corpora-license-confirmation/: CARD.md
findings/2026-05-05-fire-v2.5-runbook/: RUNBOOK.md
findings/2026-05-05-five-hour-autonomous-plan/: PLAN.md  RESULTS.md
findings/2026-05-05-hf-model-card-draft/: CARD.md
findings/2026-05-05-improvement-dimensions-roadmap/: CARD.md
findings/2026-05-05-judge-filter-batch-c/: CARD.md
findings/2026-05-05-lobster-disk-forensics/: SPEC.md
findings/2026-05-05-nvidia-best-practices/: SPEC.md
findings/2026-05-05-process-supervision-verifiability/: SPEC.md
findings/2026-05-05-reliability-calibration/: SPEC.md
findings/2026-05-05-secret-scanner-swap/: CARD.md
findings/2026-05-05-skill-registry-ui/: CARD.md
findings/2026-05-05-skills-router-v1/: CARD.md
findings/2026-05-05-up037-safety-plan/: CARD.md  SPEC.md
findings/2026-05-05-v-final-hf-release/: RUNBOOK.md
findings/2026-05-05-v0-v1-paired-eval/: RUNBOOK.md
findings/2026-05-05-v2.5-base-precision-mismatch/: CARD.md
findings/2026-05-05-v2.5-eval/: CARD.md  REPRO.sh  (+11 more)
findings/2026-05-05-v2.5-eval-thinking/: EVAL-STATUS.md  MANIFEST.sha256  REPRO.sh  SHIP-RULE-RESULTS.json  SHIP-RULE-RESULTS.md  stats.json
mla/: .gitignore  LICENSE  SECURITY.md  pyproject.toml  retrieval.py
mla/agent/: critique.py  generate.py  llm_client.py  mutate.py  safety.py  torch_stub_mutations.py
mla/agent/prompts/: critique.txt  mutation.txt  mutation_torch.txt
mla/docs/: EVALUATION_RUBRIC.md  H100_RUNBOOK.md
mla/judges/: __init__.py  reward.py  triton.py
mla/kernels/base/: mla_decode_numpy.py  mla_decode_torch.py
mla/loop/: evolve.py  evolve_demo.py  evolve_torch.py  manual_mutation.py  pareto.py
mla/prism/: __init__.py  adversarial.py  gaming_patterns.py  invariants.py  validator.py  validator_torch.py
mla/runner/: flashinfer_runner.py  numpy_runner.py  torch_runner.py
mla/scripts/: _bench_worker.py  claude_torch_mutate.py  compile_benchmark.py  evolve_plus_flashinfer.py  h100_smoke.py  isolated_bench.py  run_claude_candidates.py  setup_h100.sh  smoke_real_claude.py  verify_h100.sh  verify_ralph_consistency.py
mla/tests/: test_agent_stub.py  test_critique.py  test_evolve.py  test_evolve_critique.py  test_flashinfer_runner_cpu.py  test_flashinfer_runner_cuda.py  test_gaming_patterns.py  test_mla_kernels.py  test_numerical_stability.py  test_pareto.py  test_runpod_provisioner.py  test_safety.py  test_safety_torch.py  test_validator.py
reproducibility/: manifest-template.yaml
runbooks/: blue-green-pod-replacement.md  parity-anchors.md
scripts/: _build_chunks_pmc_verbatim.py  _build_chunks_v2.py  _healthbench_grader_bridge.py  _runpod_ssh.sh  adversarial_probe.py  airplane_mode_test.sh  bench_judge_throughput.py  bench_omni_alongside.sh  bench_primekg_cugraph.py  build_lazygraph_rag.py  build_primekg_cugraph.py  build_seed_kg.py  build_trtllm_engine.sh  clinical_skill_review.py  compare_cards.py  emit_manifest.py  expand_kg_with_openem.py  finalize_pilot.sh  freeze_snapshot.py  grade_hb_parallel.py  graph_primekg_subgraph.py  graph_subgraph_slice.py  guardrails_config.yaml  health_check_all_pods.sh  healthbench_runner.py  launch_b300_prod.sh  launch_h200_factory.sh  medagentbench_runner.py  medqa_runner.py  mmlu_medical_runner.py  preflight.sh  pubmedqa_runner.py  retrieval.py  retrieval_cuvs.py  run_demo.sh  serve_judge_b300.sh  serve_judge_h100.sh  serve_nims_b300.sh  serve_omni_b300.sh  serve_primekg_b300.py  (+9 more)
tests/: test_adversarial_probe.py  test_clinical_case.py  test_clinical_demo_artifacts.py  test_clinical_demo_fixtures.py  test_clinical_subset_sampler.py  test_corpus_generator.py  test_failure_cluster.py  test_healthbench_grader_wire.py  test_healthbench_judge.py  test_kappa_comparator.py  test_ship_rule_eval.py  test_triton_judge.py  test_v25b_judge_filter.py
web/: README.md  next.config.ts  package.json  pnpm-lock.yaml
(+357 files in other folders)
