[project]
name = "prism42-nemotron-med"
version = "0.1.0"
description = "Sovereign NVIDIA medical-LLM stack on Brev Hopper GPUs"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests", "mla/tests"]
asyncio_mode = "auto"
# Skip two tests that reference modules not present in the tree:
#   - tests/test_clinical_subset_sampler.py imports `sample_clinical_subset`
#     (intended to live in scripts/ but never checked in; tracked by task #35).
#   - mla/tests/test_runpod_provisioner.py imports `runner.runpod_provisioner`
#     (mla/runner/ has flashinfer / numpy / torch runners, no runpod one).
# Both are collection errors (ModuleNotFoundError on import), not test
# failures — without ignoring them pytest exits 2 and the whole job is red.
# Restoring either module will cause the import to succeed; the file-level
# ignore can come back out at that point. NO --ignore for the test_clinical_*
# pair — those need `jsonschema` which is added to the workflow's pip install.
addopts = [
    "--ignore=tests/test_clinical_subset_sampler.py",
    "--ignore=mla/tests/test_runpod_provisioner.py",
]
markers = [
    "integration: requires live H100 or H200 Brev pod via SSH (brev.pem + network)",
    "h200: requires the warm-lavender-narwhal H200 pod",
    "h100: requires the prism-mla-h100 pod (NOT the voice-freeze H100)",
    "training: long-running NeMo PEFT LoRA training",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "data/seed_kg",
    "corpus",
    "results",
    "trt_engines",
    "nemo/checkpoints",
    "findings",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
# I001 (import-block sort): tests use `sys.path.insert(0, str(SCRIPTS))`
# followed by an import from `scripts/` (a non-package directory). ruff's
# isort treats the post-`sys.path` import as out-of-order vs stdlib —
# auto-fix would either move the import above its `sys.path` patch
# (breaking it) or insert an `# isort: skip`. Co-locating `noqa` is the
# legitimate pattern; I001 is the missing third companion to the existing
# E402 / F401 ignores already justified here.
"tests/*" = ["E402", "F401", "I001"]
"mla/tests/*" = ["E402", "F401", "I001"]
"scripts/*" = ["E402"]
